--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@clerk/nextjs": "^6.12.7",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -63,6 +65,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
+    "ignore": "^5.3.2",
     "init": "^0.1.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
