--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-md-editor": "^4.0.5",
     "ai": "^4.2.6",
+    "assemblyai": "^4.9.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.5.0",
     "geist": "^1.3.0",
     "ignore": "^5.3.2",
     "init": "^0.1.2",
