--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.1",
+    "stripe": "^17.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
